# cje-extensions

./: .gitignore  AGENTS.md  CLAUDE.md  LOGGER.md  README.md  demo.ipynb  demo_utils.py  direct_cvar_cje_demo.py  john_feedback.md  refactor.py
cvar_v5/: PIPELINE.md  TODO.md  pyproject.toml  validation_study.tex
cvar_v5/_archive/: README.md  audit_transport_investigation.py  calibrator_alt.py  calibrator_alt_test.py  conftest.py  estimator_comparison_sweep.py  joint_calibrator_sweep.py  plugin_estimators.py  plugin_estimators_test.py
cvar_v5/_archive/audit_evaluation/: README.md  _bias_corrections.py  _bias_diagnostic.py  _compare_kfold_in_boot.py  _diagnostics.py  _harness.py  _sanity.py  _size_diagnostic.py  _truth_decomp.py  _truths.py  _variance_diagnostic.py  _variance_methods_extra.py  evaluation.md  run_evaluation.py
cvar_v5/cvar_cje/: _crossfit.py  audit.py  audit_test.py  calibrator.py  calibrator_test.py  config.py  estimator.py  estimator_test.py  pipeline.py  pipeline_test.py  schema.py
cvar_v5/figures/: conclusion_bootstrap_overlay.csv  dgp_policy_distributions.csv
cvar_v5/mc/: _io.py  _io_test.py  dgp.py  dgp_test.py  omega_n_audit_sweep.py  report.py  runner.py  targets.md
cvar_v5/mc/runs/2026-05-02T082908_smoke/: log.txt  mc_validation.md  results_mc.csv  run_config.json
cvar_v5/mc/runs/2026-05-02T082919_smoke/: log.txt  results_mc.csv  run_config.json
cvar_v5/mc/runs/2026-05-02T093648_omega_sweep/: log.txt  mc_validation.md  results_mc.csv  run_config.json
cvar_v5/mc/runs/2026-05-02T102005_medium/: log.txt  mc_validation.md  (+2 more)
(+795 files in other folders)
